use different url based on device

--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; URL='https://www.amazon.com/s/?tag=ramsfootballc-20&ie=UTF8&index=blended&keywords=rams&ein=26-0239043'" />
 <title>Rams Football Club Amazon Page</title>
 </head>
 <body>
+  <script type="text/javascript">
+		var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+		var element = document.getElementById('text');
+		if (isMobile) {
+  			window.location.replace("https://www.amazon.com/s/?tag=ramsfootballc-20&ie=UTF8&index=blended&keywords=rams&ein=26-0239043");
+    } else {
+			window.location.replace("https://smile.amazon.com/s/?tag=ramsfootballc-20&ie=UTF8&index=blended&keywords=rams&ein=26-0239043");
+		}
+	</script>
 </body>
 </html>
